--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "http-dns",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Node DNS library that uses Google's HTTPS DNS API for doing queries in the browser",
   "main": "dist/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/octoblu/http-dns#readme",
   "dependencies": {
     "lodash": "^4.17.2",
-    "superagent": "^3.1.0"
+    "superagent": "^3.1.0",
+    "url": "^0.11.0"
   }
 }
