--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ branches:
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 before_deploy:
-- mkdir dist
-- coffee --compile --output dist index.coffee
+- npm run build
 deploy:
   provider: npm
   email: serveradmin@octoblu.com
