--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "http-dns",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Node DNS library that uses Google's HTTPS DNS API for doing queries in the browser",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo 'tests are for those who are unsure of victory'",
-    "build": "mkdir -p dist && coffee --compile --output dist index.coffee"
+    "test": "mocha",
+    "build": "mkdir -p dist && coffee --compile --output dist index.coffee",
+    "coverage": "nyc npm test",
+    "mocha:json": "mocha --reporter json > coverage/mocha.json",
+    "test:watch": "mocha -w -R mocha-multi --reporter-options spec=-,mocha-osx-reporter=-"
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,28 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.12.1"
+    "chai": "^3.5.0",
+    "chai-subset": "^1.3.0",
+    "coffee-script": "^1.12.1",
+    "env-test": "^1.0.0",
+    "mocha": "^3.2.0",
+    "mocha-multi": "^0.9.1",
+    "mocha-osx-reporter": "^0.1.2",
+    "nyc": "^10.0.0",
+    "server-destroy": "^1.0.1",
+    "shmock": "^0.8.1",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0"
+  },
+  "nyc": {
+    "cache": true,
+    "reporter": [
+      "text-summary",
+      "lcov",
+      "json"
+    ],
+    "extension": [
+      ".coffee"
+    ]
   }
 }
