--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ branches:
   - "/^v[0-9]/"
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+before_deploy:
+- npm run build
 deploy:
   provider: npm
   skip_cleanup: true
